@@ -16,14 +16,12 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
-	$Id: common.h,v 1.17 2006/04/30 11:27:14 disconn3ct Exp $
+	$Id: common.h,v 1.18 2006/05/23 14:47:54 vvd0 Exp $
 */
 // common.h  -- general definitions
 
 #ifndef __COMMON_H__
 #define __COMMON_H__
-
-#include "bothdefs.h"
 
 //============================================================================
 typedef struct sizebuf_s
